--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,12 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HoaxBusterTools"
-        tools:targetApi="34">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="34" >
         <activity
-            android:name="irfan.hoaxbustertools.MainActivity"
+            android:name=".ToolActivity"
+            android:exported="false"
+            android:theme="@style/Theme.HoaxBusterTools.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HoaxBusterTools.NoActionBar">
+            android:theme="@style/Theme.HoaxBusterTools.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
