--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HoaxBusterTools"
         android:usesCleartextTraffic="true"
-        tools:targetApi="34" >
+        tools:targetApi="34">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
         <activity
             android:name=".ToolActivity"
             android:exported="false"
@@ -21,7 +25,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HoaxBusterTools.NoActionBar" >
+            android:theme="@style/Theme.HoaxBusterTools.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
